--- a/templates/index.html
+++ b/templates/index.html
@@ -342,7 +342,7 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+            <form action="mailto:nageswarichirladinne@gmail.com" method="post" enctype="text/plain">
               <div class="form-group">
                 <input type="text" class="form-control" name="name" placeholder="Your Name" required>
               </div>
