--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
                 Perfectly Executed Creation."</p>
               <div class="btn-bar">
                 <a href="#one" class="btn btn-custom theme_background_color">Get Started</a>
-                <a href="#six" class="btn btn-custom-outline">Contact Us</a>
+                <a href="#six" class="btn btn-custom-outline">Contact Me</a>
               </div>
             </div>
           </div>
